2007-05-22  Richard Hult  <richard@imendio.com>

	* dbus-tests/test-getting-and-setting.sh:
	* dbus-tests/test-schema-bug.c: (main):
	* dbus-tests/test-schemas.schemas: Use different keys for the
	different tests so they don't interfere with each other.
	
	* gconf/gconf-database-dbus.c:
	(database_handle_name_owner_changed),
	(gconf_database_dbus_teardown): Remove obsolete comments.
	(gconf_database_dbus_notify_listeners): Notify other listeners.
	
	* gconf/gconf-dbus.c: (gconf_engine_is_local):
	* gconf/gconfd-dbus.c: (gconfd_dbus_get_connection): Remove
	obsolete comments.

2007-05-21  Richard Hult  <richard@imendio.com>

	* gconf/gconf-dbus-utils.c: (utils_append_value_helper_pair),
	(utils_append_value), (utils_append_entry_values),
	(utils_get_value_helper_fundamental),
	(utils_get_value_helper_pair): Handle empty pairs.

2007-05-15  Richard Hult  <richard@imendio.com>

	* dbus-tests/test-stale-value-bug.c: Improve the test.

        * gconf/gconf-client.c (remove_key_from_cache_recursively_foreach)
        (remove_key_from_cache_foreach): Fix the checks for keys to
        remove.

2007-01-19  Richard Hult  <richard@imendio.com>

	* gconf/gconftool.c: (main): Back out the "killall" change and put
	in a patch instead.

2007-01-17  Richard Hult  <richard@imendio.com>

	* dbus-tests/run-all.sh: Add test that can be used to hammer the
	library and daemon.
	
	* gconf/gconf-database-dbus.c: (database_handle_lookup_ext): Fix
	small leak.
	
	* gconf/gconf-database.c: (source_notify_cb),
	(gconf_database_unset), (gconf_database_recursive_unset): Plug
	small leaks.

	* gconf/gconf-value.c: Fix leaks (bug filed upstream).

	* gconf/gconfd.c: (main), (gconf_main): Make Ctrl-C work, no need
	to ignore that signal. Also ignore the cleanup timeout also when
	quitting on maemo.

2007-01-17  Richard Hult  <richard@imendio.com>

	* gconf/gconf-database.c (gconf_database_unset): Fix a leaked
	GConfValue when unsetting a value.
